--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,12 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es2018",
+    "target": "es2016",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2018", "dom", "esnext.asynciterable"]
+    "lib": ["es2016", "dom", "esnext.asynciterable"],
+    "paths": {
+      "@local/IteratorStateManagement": ["./src/iterator-state-management"],
+      "@local/EventsIterator": ["./src/events-iterator"]
+    }
   }
 }
