--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~7.0.0-rc.0",
     "@angular/router": "~7.0.0-rc.0",
     "core-js": "^2.5.4",
+    "double-ended-queue": "^2.1.0-0",
+    "ramda": "^0.25.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
