--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es2018",
+    "target": "es6", // https://github.com/angular/zone.js/issues/740
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2018", "dom", "esnext.asynciterable"],
     "paths": {
