EventsIterator: use iter-tools package

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^7.0.0",
     "core-js": "^2.5.4",
     "double-ended-queue": "^2.1.0-0",
+    "iter-tools": "^6.1.5",
     "ramda": "^0.25.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
