--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "lib": ["es2018", "dom", "esnext.asynciterable"],
     "paths": {
       "@local/IteratorStateManagement": ["./src/iterator-state-management"],
-      "@local/EventsIterator": ["./src/events-iterator"]
+      "@local/QueuedIterator": ["./src/queued-iterator"]
     }
   }
 }
